[project]
name = "daft2dataset"
version = "0.1.0"
description = "Convert common crawl to multimodal datasets."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Teraflop AI", email = "enrico@teraflop.ai"},
]
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[tool.uv]
package = true
