[project]
name = "frigg"
version = "0.1.21"
description = "Convert common crawl to multimodal datasets."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Teraflop AI", email = "enrico@teraflop.ai"},
]
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "daft>=0.6.3",
    "fake-useragent>=2.2.0",
    "pandas>=2.3.3",
    "pysimdjson>=7.0.2",
    "streamlink>=8.0.0",
    "urllib3>=2.5.0",
    "xxhash>=3.5.0",
]

[tool.uv]
package = true
